--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <div class="relative">
           <div class="floating rotate-3d">
             <div class="gradient-border">
-              <img src="/mohana.jpeg" 
+              <img src="mohana.jpeg" 
                    alt="Mohanapriya" 
                    class="w-full rounded-xl shadow-2xl hover:scale-105 transition-transform duration-500">
             </div>
@@ -1466,3 +1466,4 @@
 </body>
 
 </html>
+
