--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@
             <!-- Main Profile Image -->
             <div class="relative group">
               <div class="absolute -inset-4 bg-gradient-to-r from-cyan-500 to-purple-600 rounded-full blur-xl opacity-50 group-hover:opacity-75 transition duration-500"></div>
-              <img src="/images/mohana.jpeg" 
+              <img src="/mohana.jpeg" 
                    alt="Mohanapriya Ramakrishnan"
                    class="relative w-72 h-72 md:w-96 md:h-96 rounded-full object-cover border-4 border-gray-800 shadow-2xl hover:scale-105 transition-transform duration-500"
                    onerror="this.src='https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80'">
@@ -1102,3 +1102,4 @@
 </body>
 
 </html>
+
