--- a/about.html
+++ b/about.html
@@ -356,7 +356,7 @@
             <div class="relative group">
               <div class="absolute -inset-4 bg-gradient-to-r from-cyan-500 to-purple-600 rounded-full blur-xl opacity-50 group-hover:opacity-75 transition duration-500"></div>
                 <img src="/mohana.jpeg" 
-                   alt="Mohanapriya Ramakrishnan"   
+                   alt="Mohanapriya Ramakrishnan">  
             </div>
             
             <!-- Floating Elements Around Image -->
@@ -1100,3 +1100,4 @@
   </script>
 </body>
 </html>
+
